@@ -1,3 +1,8 @@
+2005-10-27  Jeroen T. Vermeulen <jtv@xs4all.nl>
+ configure.ac.in:
+  - More work on strerror_r guessing logic
+ src/util.cxx:
+  - Zero-terminate error strings that overflow buffer
 2005-10-25  Jeroen T. Vermeulen <jtv@xs4all.nl>
  win32/INSTALL.txt:
   - Removed thread-safety configure option
